@@ -3,7 +3,6 @@ package com.example.petproject.handler;
 import com.example.petproject.error.ApiError;
 import com.example.petproject.exception.DuplicateUsernameException;
 import com.example.petproject.exception.ObjectNotFoundException;
-import com.example.petproject.exception.RoleNotFoundException;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
@@ -22,12 +21,6 @@ import java.util.stream.Collectors;
 @ControllerAdvice
 public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
 
-    @ExceptionHandler(RoleNotFoundException.class)
-    @ResponseStatus(HttpStatus.NOT_FOUND)
-    public @ResponseBody ResponseEntity<String> roleNotFound(RoleNotFoundException exception) {
-        return new ResponseEntity<>(exception.getMessage(), HttpStatus.NOT_FOUND);
-    }
-
     @ExceptionHandler(DuplicateUsernameException.class)
     @ResponseStatus(HttpStatus.CONFLICT)
     public @ResponseBody ResponseEntity<String> usernameIsTaken(DuplicateUsernameException exception) {
@@ -35,9 +28,9 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
     }
 
     @ExceptionHandler(ObjectNotFoundException.class)
-    @ResponseStatus(HttpStatus.CONFLICT)
+    @ResponseStatus(HttpStatus.NOT_FOUND)
     public @ResponseBody ResponseEntity<String> objectNotFound(ObjectNotFoundException exception) {
-        return new ResponseEntity<>(exception.getMessage(), HttpStatus.CONFLICT);
+        return new ResponseEntity<>(exception.getMessage(), HttpStatus.NOT_FOUND);
     }
 
     @Override
@@ -46,11 +39,10 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
                                                                   HttpStatusCode status,
                                                                   WebRequest request) {
 
-// TODO: 28.07.2023 .getFieldErrors() на след строке
-        List<String> errors = ex.getBindingResult().getFieldErrors()
+        List<String> errors = ex.getBindingResult()
+                .getFieldErrors()
                 .stream()
-                // TODO: 28.07.2023 "".formatted()
-                .map(error -> String.format("%s : %s", error.getField(), error.getDefaultMessage()))
+                .map(error -> "%s : %s".formatted(error.getField(), error.getDefaultMessage()))
                 .collect(Collectors.toList());
 
         List<String> globalErrors = ex.getBindingResult().getGlobalErrors()
